--- a/source/gcube_integration_for_b3gbi.Rmd
+++ b/source/gcube_integration_for_b3gbi.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r, warning=FALSE, message=FALSE}
-# Load packages
+## Load packages
 library(gcube)     # Simulate biodiversity data cubes
 library(b3gbi)     # Calculate general indicators for biodiversity data cubes
 
@@ -27,10 +27,9 @@ library(tidyverse) # Data wrangling and visualisation
 
 # Introduction
 
-We install the [b3gbi](https://github.com/b-cubed-eu/b3gbi/) (version 0.2.1) and [gcube](https://github.com/b-cubed-eu/gcube) (version 0.0.1) packages.
-We can simulate biodiversity data cubes with gcube and afterwards calculate general indicators with the b3gbi package.
+We want to simulate biodiversity data cubes with [gcube](https://github.com/b-cubed-eu/gcube) and afterwards calculate general indicators with the [b3gbi](https://github.com/b-cubed-eu/b3gbi/) package.
 
-**Why do we want this integration?**
+*Why do we want this integration?*
 
 The goal of gcube is to provide a simulation framework for biodiversity data cubes.
 Simulation studies offer numerous benefits due to their ability to mimic real-world scenarios in controlled and customizable environments.
@@ -42,7 +41,11 @@ Varying the different parameters provides insights on the factors influencing fi
 b3gbi is an R package that provides functions that calculate general biodiversity indicators from data cubes.
 Linking the output of simulated cubes from gcube into the b3gbi workflow is thus an essential step in the investigation of the effects of different data cube parameters on final estimated statistics and trends.
 
-# Input for b3gbi
+# b3gbi version 0.2.1
+
+We install the [b3gbi](https://github.com/b-cubed-eu/b3gbi/) (version 0.2.1) and [gcube](https://github.com/b-cubed-eu/gcube) (version 0.0.1) packages.
+
+## Example
 
 The input for the b3gbi package is the location of a CSV file.
 
@@ -69,11 +72,10 @@ insect_data
 The function `process_cube_old()` seems rather strict regarding the column names.
 The new `process_cube()` function is more flexible in this sense.
 
-> For an efficient workflow. These functions should also allow R dataframes as input.
+## Try gcube output as input
 
-Let's create a cube with gcube.
-
-```{r}
+```
+## Create cube with gcube (4 time points, 1 species)
 # Create a polygon to simulate occurrences
 polygon <- st_polygon(list(cbind(c(5, 10, 8, 2, 3, 5), c(2, 1, 7, 9, 5, 2))))
 
@@ -82,6 +84,7 @@ occurrences_df <- simulate_occurrences(
   plgn = polygon,
   n_time_points = 4,
   seed = 123)
+#> [using unconditional Gaussian simulation]
 
 # Detect occurrences
 detections_df_raw <- sample_observations(
@@ -107,10 +110,10 @@ buffered_observations <- st_buffer(
 
 # Define a grid over spatial extend
 grid_df <- st_make_grid(
-    buffered_observations,
-    square = TRUE,
-    cellsize = c(1.2, 1.2)
-  ) %>%
+  buffered_observations,
+  square = TRUE,
+  cellsize = c(1.2, 1.2)
+) %>%
   st_sf() %>%
   mutate(intersect = as.vector(st_intersects(geometry, polygon,
                                              sparse = FALSE))) %>%
@@ -133,22 +136,19 @@ ggplot() +
   theme_minimal()
 ```
 
-We add a taxon name and save the cube (dataframe) as a CSV file so we can try and load id with `b3gbi::process_cube()`.
+![](https://i.imgur.com/z7eR9pH.png)<!-- -->
 
-```{r}
-data_path <- here::here("data", "raw")
-dir.create(data_path, showWarnings = FALSE, recursive = TRUE)
-
+```
+## Write out csv
 occurrence_cube_df %>%
   st_drop_geometry() %>%
   mutate(species = "species1",
          species_key = "s1") %>%
-  write_delim(file.path(data_path, "gcube_df.csv"), delim = "\t", na = "")
-```
+  write_delim("gcube_df.csv", delim = "\t", na = "")
 
-```{r}
+## Process cube with b3gbi
 gcube_data <- process_cube(
-  cube_name = file.path(data_path, "gcube_df.csv"),
+  cube_name = "gcube_df.csv",
   grid_type = "eea",
   force_gridcode = TRUE,
   cols_year = "time_point",
@@ -157,27 +157,65 @@ gcube_data <- process_cube(
   cols_scientificName = "species",
   cols_minCoordinateUncertaintyInMeters = "min_coord_uncertainty",
   cols_speciesKey = "species_key"
-  )
-
+)
 gcube_data
-```
+#> 
+#> Processed data cube for calculating biodiversity indicators
+#> 
+#> Date Range: 1 - 3 
+#> Single-resolution cube with cell size 10 12 13 14 15 16 19 20 23 26 29 30 36 37 5 7 8 9 1 2 3 4 6 11 17 18 21 22 24 25 27 28 31 32 33 34 35 38 ^2
+#> Number of cells: 38 
+#> Grid reference system: eea 
+#> Coordinate range:
+#> xmin xmax ymin ymax 
+#>   NA   NA   NA   NA 
+#> 
+#> Total number of observations: 70 
+#> Number of species represented: 1 
+#> Number of families represented: Data not present 
+#> 
+#> Kingdoms represented: Data not present 
+#> 
+#> First 10 rows of data (use n = to show more):
+#> 
+#> # A tibble: 114 × 9
+#>     year cellCode   obs scientificName minCoordinateUncertaint…¹ taxonKey xcoord
+#>    <dbl> <chr>    <dbl>          <dbl> <chr>                     <chr>     <dbl>
+#>  1     1 10           1         0.552  species1                  s1           NA
+#>  2     1 12           3         0.0242 species1                  s1           NA
+#>  3     1 13           2         0.0217 species1                  s1           NA
+#>  4     1 14           2         0.233  species1                  s1           NA
+#>  5     1 15           1         0.584  species1                  s1           NA
+#>  6     1 16           2         0.0241 species1                  s1           NA
+#>  7     1 19           1         0.0844 species1                  s1           NA
+#>  8     1 20           2         0.149  species1                  s1           NA
+#>  9     1 23           1         0.353  species1                  s1           NA
+#> 10     1 26           1         0.208  species1                  s1           NA
+#> # ℹ 104 more rows
+#> # ℹ abbreviated name: ¹​minCoordinateUncertaintyInMeters
+#> # ℹ 2 more variables: ycoord <dbl>, resolution <chr>
 
-> Should be able to use a custom grid_type with forced grid code. Now metadata is wrong.
 
-> This code does not work if you have only 1 time point.
-
-We can try and calculate an indicator.
-A spatial indicator will not work since we do not have the right spatial metadata.
-We try a time series indicator.
-
-```{r, eval=FALSE}
+## Calculate an indicator over time
 total_occ_ts(gcube_data)
+#> Error in if (stringr::str_detect(resolution, "km")) {: the condition has length > 1
 ```
 
-```{r, echo=FALSE}
-try(expr = total_occ_ts(gcube_data))
-```
+<sup>Created on 2024-07-09 with [reprex v2.1.0](https://reprex.tidyverse.org)</sup>
 
 This throws an error by `check_cell_size()`.
 
-> Why do we need to know the spatial resolution for a temporal indicator?
+**Challenges**
+
+1.  For an efficient workflow `process_cube()` should also allow R dataframes as input
+     -  Currently, gcube dataframes should be stored as CSV files and their paths used as input for `process_cube()`
+2.  Allow custom grid type in `process_cube()`
+    -  With `force_gridcode = TRUE`
+    -  Now the metadata is incorrect and no indicators can be calculated further upstream
+3. Calculate indicators for custom cubes
+    - I understand visualisation cannot made possible, but at least it should be possible to calculate the indicators since we have the same data type (does not matter if it is eea or mgrs or ..., year or month or time_period or ...)
+    - Visualisation can be done by the user itself
+
+# b3gbi version 0.2.3
+
+Review for [this pull request](https://github.com/b-cubed-eu/b3gbi/pull/25).
