add multispecies example

--- a/source/gcube_integration_for_b3gbi.Rmd
+++ b/source/gcube_integration_for_b3gbi.Rmd
@@ -221,82 +221,75 @@ This throws an error by `check_cell_size()`.
 Review for [this pull request](https://github.com/b-cubed-eu/b3gbi/pull/25).
 We install the [b3gbi](https://github.com/b-cubed-eu/b3gbi/) (version 0.2.3) and [gcube](https://github.com/b-cubed-eu/gcube) (version 0.1.0) packages.
 
+We create a datacube with **gcube** for 6 species over 6 time points.
+First we define the spatial extend.
+
 ```{r}
-## Create cube with gcube (4 time points, 1 species)
 # Create a polygon to simulate occurrences
-polygon <- st_polygon(list(cbind(c(5, 10, 8, 2, 3, 5), c(2, 1, 7, 9, 5, 2))))
+polygon <- st_polygon(list(cbind(c(500, 1000, 1000, 600, 200, 100, 500),
+                                 c(200, 100, 700, 1000, 900, 500, 200))))
 
-# Simulate occurrences within polygon
-occurrences_df <- simulate_occurrences(
-  plgn = polygon,
-  n_time_points = 4,
-  seed = 123)
-#> [using unconditional Gaussian simulation]
+# Create grid for grid designation
+cube_grid <- st_make_grid(
+  st_buffer(polygon, 50),
+  n = c(20, 20),
+  square = TRUE) %>%
+  st_sf()
 
-# Detect occurrences
-detections_df_raw <- sample_observations(
-  occurrences = occurrences_df,
-  detection_probability = 0.5,
-  seed = 123)
-
-# Select detected occurrences only
-detections_df <- detections_df_raw %>%
-  dplyr::filter(sampling_status == "detected")
-
-# Add coordinate uncertainty
-set.seed(123)
-coord_uncertainty_vec <- rgamma(nrow(detections_df), shape = 2, rate = 6)
-observations_df <- add_coordinate_uncertainty(
-  observations = detections_df,
-  coords_uncertainty_meters = coord_uncertainty_vec)
-
-# Created and sf object with uncertainty circles to visualise
-buffered_observations <- st_buffer(
-  observations_df,
-  observations_df$coordinateUncertaintyInMeters)
-
-# Define a grid over spatial extend
-grid_df <- st_make_grid(
-  buffered_observations,
-  square = TRUE,
-  cellsize = c(1.2, 1.2)
-) %>%
-  st_sf() %>%
-  mutate(intersect = as.vector(st_intersects(geometry, polygon,
-                                             sparse = FALSE))) %>%
-  dplyr::filter(intersect == TRUE) %>%
-  dplyr::select(-"intersect")
-
-# Create occurrence cube
-occurrence_cube_df <- grid_designation(
-  observations = observations_df,
-  grid = grid_df,
-  seed = 123)
-
-# Visualise grid designation
+# Visualise
 ggplot() +
-  geom_sf(data = occurrence_cube_df, linewidth = 1) +
-  geom_sf_text(data = occurrence_cube_df, aes(label = n)) +
-  facet_wrap(~time_point) +
-  labs(x = "", y = "", fill = "n",
-       title = "Data cube for 1 species over multiple time points") +
+  geom_sf(data = polygon) +
+  geom_sf(data = cube_grid, alpha = 0) +
   theme_minimal()
 ```
 
-Write out data and process cube.
+Let's simulate the cube.
 
 ```{r}
-occurrence_cube_df %>%
-  st_drop_geometry() %>%
-  mutate(species = "species1",
-         species_key = "s1") %>%
-  write_delim("./data/raw/gcube_df.csv", delim = "\t", na = "")
+# Create dataframe with simulation function arguments
+multi_species_args <- tibble(
+  plgn = rep(list(polygon), 6),
+  initial_average_abundance = rep(c(50, 100, 500), 2),
+  n_time_points = rep(6, 6),
+  temporal_function = c(simulate_random_walk, simulate_random_walk, rep(NA, 4)),
+  sd_step = c(1, 1, rep(NA, 4)),
+  spatial_autocorr = c(rep("random", 3), rep("clustered", 3)),
+  detection_probability = rep(c(0.8, 0.9, 1), 2),
+  coords_uncertainty_meters = rep(c(25, 30, 50), 2),
+  grid = rep(list(cube_grid), 6),
+  seed = 123
+)
+
+# Generate taxonomic hierarchy
+multi_species_dataset <- generate_taxonomy(
+  num_species = multi_species_args,
+  num_genera = 4,
+  num_families = 2,
+  seed = 123)
+
+map_occ_cube_df <- multi_species_dataset %>%
+  map_simulate_occurrences() %>%
+  map_sample_observations() %>%
+  map_filter_observations() %>%
+  map_add_coordinate_uncertainty() %>%
+  map_grid_designation(nested = FALSE)
+
+glimpse(map_occ_cube_df)
+```
+
+This time we do not write out a csv, but we use the dataframe to process the cube.
+
+```{r}
+occ_cube_df_cleaned <- map_occ_cube_df %>%
+  select(-all_of(names(multi_species_args))) %>%
+  select(-occurrences, -observations_total, -observations) %>%
+  mutate(species_key = as.numeric(gsub("species", "", species)))
 
 ## Process cube with b3gbi
 gcube_data <- process_cube(
-  cube_name = "./data/raw/gcube_df.csv",
-  grid_type = "eea",
-  force_gridcode = TRUE,
+  cube_name = occ_cube_df_cleaned,
+  data_type = "df",
+  grid_type = "none",
   cols_year = "time_point",
   cols_cellCode = "id",
   cols_occurrences = "n",
@@ -307,3 +300,6 @@ gcube_data <- process_cube(
 gcube_data
 ```
 
+```{r}
+total_occ_ts(gcube_data)
+```
