--- a/source/first_revision_pdindicator.Rmd
+++ b/source/first_revision_pdindicator.Rmd
@@ -59,6 +59,8 @@ It might be beneficial to start with a single clean repo for the R package to ma
 - Perhaps some functions should be renamed (https://docs.b-cubed.eu/dev-guide/#r-function-naming)
   - "Use verbs to name functions whenever possible"
   - Currently, everything is called PD indicator, but in the future more PD indicators might be added. If I understand correctly, there is only 1 indicator calculated at the moment (i.e., sum of branch lengths).
+
+- In the package, we should not have the tidyverse dependency since this contains a lot of packages. Instead use the ones we actually need (dplyr, stringr ...).
   
 ## General
 
