--- a/source/first_revision_pdindicator.Rmd
+++ b/source/first_revision_pdindicator.Rmd
@@ -21,6 +21,24 @@ https://github.com/b-cubed-eu/pdindicatoR/commit/f380d6cda82351d3bd83599e63591b9
 
 `workflow.R` is the main script.
 
+## General
+
+The structure of the PD indicator is not entirely clear to me.
+
+**1.** There could be multiple PD indicators, e.g.:
+
+- `calc_pd_ind1(cube, tree)`: e.g. sum of branch lengths (currently in `calculate_pd()`)
+- `calc_pd_ind2(cube, tree)`: ...
+- `calc_pd_ind3(cube, tree)`: ...
+- ...
+
+**2.** There could be multiple derived PD indicators. The `f` argument is one of the PD indicator functions above, e.g.:
+
+- `calc_derived_pd_ind1(cube, f, cutoff)`: e.g. the percentage of high PD cells that fall within the boundaries of a protected area (currently in `pdindicator()`)
+- ...
+
+Currently, everything is called PD indicator. Phylogenetic diversity is a broad term which is now used for a very specific case. The functions should get clear names of what they do. E.g. `calc_sum_branchlength_pdind()` instead of `calculate_pd()` and `calc_protected_area_pdind()` instead of `pdindicator()` (maybe some shorter names?).
+
 ## Current code
 
 - Use relative paths (https://docs.b-cubed.eu/dev-guide/#r-rproj)
@@ -41,7 +59,6 @@ source("./taxonmatch.R")
   - Try to follow the [tidyverse style](https://style.tidyverse.org/) guide as requested by the software develoment guide
   - This will benefit code clarity for collaboration now and in the future (most important for future self)
 
-
 ## R package development
 
 - Should there be 2 repositories?
@@ -54,23 +71,5 @@ source("./taxonmatch.R")
 - In the package, we should not have the tidyverse dependency since this contains a lot of packages. Instead use the ones we actually need (dplyr, stringr ...).
 
 - It would be good if the cubes are passed to [b3gbi](https://github.com/b-cubed-eu/b3gbi) `process_cube()` function. This will make the integration of B-Cubed indicator software easy and consistent.
-  
-## General
 
-The structure of the PD indicator is not entirely clear to me.
-
-**1.** There could be multiple PD indicators, e.g.:
-
-- `calc_pd_ind1(cube, tree)`: e.g. sum of branch lengths (currently in `calculate_pd()`)
-- `calc_pd_ind2(cube, tree)`: ...
-- `calc_pd_ind3(cube, tree)`: ...
-- ...
-
-**2.** There could be multiple derived PD indicators. The `f` argument is one of the PD indicator functions above, e.g.:
-
-- `calc_derived_pd_ind1(cube, f, cutoff)`: e.g. the percentage of high PD cells that fall within the boundaries of a protected area (currently in `pdindicator()`)
-- ...
-
-Currently, everything is called PD indicator. Phylogenetic diversity is a broad term which is now used for a very specific case. The functions should get clear names of what they do. E.g. `calc_sum_branchlength_pdind()` instead of `calculate_pd()` and `calc_protected_area_pdind()` instead of `pdindicator()` (maybe some shorter names?).
-
-If the indicator functions are calculated similarly as the [b3gbi indicators](https://github.com/b-cubed-eu/b3gbi/blob/d1c4711177f40bd69a1c373ef9e263f1598700bb/R/calc_map_methods.R#L272)  (`x %>% purrr::map(~compute_evenness_formula(., type))`), we can use the functions for bootstrapping developed in [indicator-uncertainty](https://github.com/b-cubed-eu/indicator-uncertainty) to calculate confidence intervals and perform effect classification.
+- If the indicator functions are calculated similarly as the [b3gbi indicators](https://github.com/b-cubed-eu/b3gbi/blob/d1c4711177f40bd69a1c373ef9e263f1598700bb/R/calc_map_methods.R#L272)  (`x %>% purrr::map(~compute_evenness_formula(., type))`), we can use the functions for bootstrapping developed in [indicator-uncertainty](https://github.com/b-cubed-eu/indicator-uncertainty) to calculate confidence intervals and perform effect classification.
